<resources>
    <string name="app_name">LFSACrew</string>
    <string name="full_app_name">Lasallian FoodSquare App</string>
    <string name="action_sign_in_short">Register</string>
    <string name="btn_link_to_login"> I have already registered!</string>
    <string name="txt_stallname">Enter Stall Name</string>
    <string name="txt_accType">Account Type</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_viewOrderForm">VIEW ORDERS</string>
    <string name="btn_addNewMenu">ADD NEW MEAL TO MENU</string>
    <string name="search_text">Search...</string>
    <string name="btn_editMenu">Edit Menu</string>
    <string name="typeOfAccount_prompt">Please choose one</string>
    <string name="notAvailable">Set to Not Available</string>
    <string name="MustTry">Must Try</string>
    <string name="btn_deleteMenu">Delete A Meal From Menu</string>
    <string name="txt_typeofacc">Type of Account</string>
    <string name="txt_verifyacc">Verify Account</string>
    <string name="btn_sendVerification">Send Verification email</string>
    <string name="btn_proceedToLFSA">Proceed to LOGIN</string>
    <string name="txt_diplayemail">EMAIL: </string>
    <string name="txt_displaystatus">VERIFIED: </string>
    <string name="txt_resetpass">Reset Password </string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please type your registered Email Address to send you instructions on how to reset your password</string>
    <string name="email">email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_loginAsCrew">LOGIN AS CREW</string>
    <string name="btn_loginAsCustomer">LOGIN AS CUSTOMER</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Sign up here!</string>
    <string name="btn_link_to_apply_for_account">Apply for a Food Stall Crew Account</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="email_id">Email ID</string>
    <string name="title_activity_main__nav_drawer">MainActivity_NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Log Out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="for_crew">For Food Stall Crews</string>
    <string-array name="category">
        <item>Rice Meals</item>
        <item>Snacks</item>
        <item>Drinks</item>
        <item>Others</item>
    </string-array>
    <string name="para_about_us">
    We have made the app to assist the users in finding the meal that they are in the mood for without the stress of walking around in the bustling square. Our team ensured that we have the right data to give the users the means to find food under their budget. The team ensured that the application will be able to assist anybody, may it be a student, faculty or a visitor of our beloved university with finding the right meal for themselves. To make even a visitor have less stress in deciding what they should eat or where the food of their choice are.
    </string>
    <string name="txt_aboutus"> ABOUT US</string>
    <string name="quote_aboutus">"Finding the right meal for you"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="subjects">
        <item>Report A User</item>
        <item>Report An Error/Bug</item>
        <item>Comments/Suggestions</item>
        <item>Others</item>
    </string-array>
    <string name="review_word">Reviews</string>
    <string name="trans_hist_word">Transaction History</string>
    <string name="login_terms_and_condition">By using this application, you confirm \n that you have read, understood and accept our </string>
    <string name="login_terms_and_condition_word"><u>Terms and Conditions. </u></string>
    <string name="foodCook">Food is being \n cooked</string>
    <string name="sign_up_crew_instructions">Fill up the form below with correct information.</string>
    <string name="sign_up_crew_reminders">Applying for an account will redirect you to your mobile device\'s installed email app.
        Please ATTACH YOUR FOOD STALL PERMIT as proof that your stall is legitimately approved to be in DLSU-D Food Square.
        You will receive a reply regarding your application for an LFSA Food Stall Crew account after <b>3 - 5 working days</b>.
        Any application with invalid information or incomplete requirement/s will be disregarded.
    </string>
    <string name="sign_up_owner">Food Stall Owner</string>
    <string name="sign_up_desc">Provide a short description of your Food Stall (i.e. Cuisines offered, Schedule, etc.)</string>
    <string name="apply">Send application via an e-mail app</string>
    <string name="select_cb">Select the food/s your food stall has to offer:</string>
    <string name="checkbox1">Snacks</string>
    <string name="checkbox2">Rice Meals</string>
    <string name="checkbox3">Drinks</string>
    <string name="txt_termsAndCondition_word">LASALLIAN FOOD SQUARE APP \n TERMS AND CONDITIONS</string>
</resources>