<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lfsa_foodstallcrew.Activities.LoginActivities.SignUpActivity_Crew">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/foodsquare_"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        >

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="155dp"
            android:layout_height="132dp"
            android:layout_marginTop="-20dp"
            app:srcCompat="@drawable/lfsa_crew_logo_no_bg_white" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up_crew_instructions"
            android:textColor="#fffff5"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/txt_stallname"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_input"
            android:drawableLeft="@drawable/ic_stallname"
            android:drawablePadding="8dp"
            android:hint="Enter Stall Name"
            android:textColorHint="#A9A9A9"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/txt_foodstallOwner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_input"
            android:drawableLeft="@drawable/ic_account_type"
            android:drawablePadding="8dp"
            android:hint="Enter Food Stall Owner"
            android:textColorHint="#A9A9A9"
            android:inputType="text"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:textColor="#000"
            android:textSize="16dp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/select_cb"
            android:textColor="#fffff5"
            android:textSize="12dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/cb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox1"
                android:textColor="#fffff5"
                android:hint="#fffff5"
                android:theme="@style/WhiteCheck"
                android:buttonTint="#fff"/>

            <!-- Login Button -->

            <CheckBox
                android:id="@+id/cb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox2"
                android:textColor="#fffff5"
                android:theme="@style/WhiteCheck"
                android:buttonTint="#fff"/>

            <CheckBox
                android:id="@+id/cb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox3"
                android:textColor="#fffff5"
                android:theme="@style/WhiteCheck"
                android:buttonTint="#fff"/>
        </LinearLayout>



        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_crew_reminders"
            android:textAlignment="viewStart"
            android:layout_marginTop="10dp"
            android:textColor="#fffff5"
            android:textSize="10sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_button_no_border"
            android:maxLines="2"
            android:text="@string/apply"
            android:textColor="@android:color/white" />

        <!-- Link to Login Screen -->

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="71dp"
        android:layout_height="97dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="185dp"
        android:visibility="gone"
        android:indeterminateTint="@color/colorPrimary"/>

</RelativeLayout>
